// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoList toggles completetions todos on click 1`] = `
<li
  className="todo-list__item"
  data-test="todo-item-1"
  key="1"
  onClick={[Function]}
>
  <button
    className="todo-list__item__btn--del"
    onClick={[Function]}
  >
    X
  </button>
  <span
    className="todo-list__item__text"
    data-completed={false}
  />
</li>
`;

exports[`TodoList toggles completetions todos on click 2`] = `
<li
  data-test="todo-item-1"
  class="todo-list__item"
>
  <button
    class="todo-list__item__btn--del"
  >
    X
  </button>
  <span
    class="todo-list__item__text"
    data-completed="true"
  />
</li>
`;
